5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4056/executions/1578_1327.log
== SUBMITION (2019-03-11 19:55:01) 
-- CODE:
print (90-35)
-- EXECUTION TIME:
0.177639
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:17) 
-- CODE:
print (90/35)
-- EXECUTION TIME:
0.191838
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
2.5714285714285716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:21) 
-- CODE:
print (90/35)
-- EXECUTION TIME:
0.143866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
2.5714285714285716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:42) 
-- CODE:
print (90/35)
-- OUTPUT:
2.5714285714285716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:56:10) 
-- CODE:
print (90_35)
-- EXECUTION TIME:
0.111718
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    print (90_35)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:56:19) 
-- CODE:
print (90-35)
-- EXECUTION TIME:
0.163645
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:56:43) 
-- CODE:
print (90-35)
-- EXECUTION TIME:
0.134319
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:42) 
-- CODE:
print (90+35)
-- EXECUTION TIME:
0.126095
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
125
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:52) 
-- CODE:
print (90-35)
-- EXECUTION TIME:
0.192207
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:59:05) 
-- CODE:
print (90$-35$)
-- EXECUTION TIME:
0.127953
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    print (90$-35$)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:00:12) 
-- CODE:
print (90-55)
-- EXECUTION TIME:
0.141663
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
